@@ -6,5 +6,5 @@ DEFS=-DLOCALEDIR=\"$(localedir)\" @DEFS@
 bin_PROGRAMS=xmlmerge
 noinst_HEADERS=args.h
 xmlmerge_SOURCES=args.c main.c
-xmlmerge_LDADD= \
-  -L/mingw/lib -L../../src -lgwenhywfar
+xmlmerge_LDADD= @PROG_LIBRARIES@ \
+  -L/mingw/lib -L../../src -lgwenhywfar 
